# blog

./: README.md  pyproject.toml
blog/: db.sqlite3
blog/blog/: settings.py  urls.py
blog/blog_app/: admin.py  custom_exceptions.py  exceptions.py  form.py  models.py  tasks.py  urls.py  utils.py  views.py
blog/blog_app/migrations/: 0001_initial.py  0002_alter_blog_id.py  0002_blog_is_published_blog_publish_at.py
blog/blog_app/static/blog_app/css/: blog_list.css
blog/blog_app/templates/blog_app/: blog_form_partial.html  blog_list.html  blog_list2.html  detail_base.html  home_base.html  login.html  register.html
blog/blog_app/test_cases/: test_app.py  test_permissions.py
